# vortex-sensor-unit

./: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/eeprom_fn/: sensor_config.c  sensor_config.h  wifi_storage.c  wifi_storage.h
main/global_fn/: global_var.c  global_var.h
main/mqtt_fn/: mqtt_client_fn.c  mqtt_client_fn.h  mqtt_state_fn.c  mqtt_state_fn.h
main/sensor_fn/: aht10_sensor.c  aht10_sensor.h  external_sensor.c  external_sensor.h  led_indicators.c  led_indicators.h  sensor_process.c  sensor_process.h
main/time_fn/: time_func.c  time_func.h
main/websocket_fn/: websocket_server_fn.c  websocket_server_fn.h  websocket_state_fn.c  websocket_state_fn.h
main/wifi_fn/: vortex_wifi.c  vortex_wifi.h
